# Estud.ia

./: .env-example  .gitignore  README.md  compose.yml  docker-compose.yml
Chainlit/: .dockerignore  .env-example  Dockerfile  api_client.py  app.py  chainlit.md  config.py  pyproject.toml  requests.py  requirements.txt
Chainlit/.chainlit/: config.toml
Chainlit/public/: theme.json
Langchain/: .env-example  Dockerfile  pyproject.toml  requeriments.txt  requierements.txt  requirements.txt
Langchain/app/: config.py  main.py  milvus.py  splitter.py
Langchain/app/core/: embbedings.py
Langchain/app/db/: milvus.py
Langchain/app/security/: __init__.py  security.py
Langchain/app/utils/: chatHistory.py  config.py  embbedings.py  graph.py  notebook_graph.py  reranker.py  retriever.py  splitter.py
Langchain/test/: README.md  __init__.py  test_embeddings.py  test_milvus.py  test_splitter.py
UsersAPI/: .dockerignore  Dockerfile  main.py  pyproject.toml
UsersAPI/app/: .env-example  auth.py  config.py  database.py  main.py  models.py  security.py
UsersAPI/app/crud/: flashcard_crud.py  message_crud.py  notebook_crud.py  quiz_crud.py  role_crud.py  source_crud.py  summary_crud.py  user_crud.py
UsersAPI/app/models/: __init__.py  flashcard_model.py  message_model.py  notebook_model.py  questions_and_answers_model.py  quiz_model.py  role_model.py  source_model.py  summary_model.py  user_model.py
UsersAPI/app/routers/: auth_router.py  flashcard_router.py  message_router.py  notebook_router.py  quiz_router.py  source_router.py  summary_router.py  user_router.py
(+121 files in other folders)
