[project]
name = "Estud.IA"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=0.1.0",
    "langchain>=1.1.2",
    "langchain-core>=1.1.1",
    "langchain-google-genai>=3.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "typing>=3.10.0.0",
]
